Closed
Bug 945568
Opened 12 years ago
Closed 12 years ago
Crash [@ ensureLinear] due to OOM in ReadFile
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
| Tracking | Status | |
|---|---|---|
| firefox28 | --- | fixed |
People
(Reporter: decoder, Assigned: decoder)
References
Details
(Keywords: crash, testcase, Whiteboard: [jsbugmon:update])
Attachments
(1 file)
|
925 bytes,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
The following test crashes on mozilla-central revision e014d47fc576 (no options required):
oomAfterAllocations(1);
read("x");
The problem is caused by calling ResolvePath and not checking its return value properly. Patch attached.
Attachment #8341455 -
Flags: review?(terrence)
Comment 1•12 years ago
|
||
Comment on attachment 8341455 [details] [diff] [review]
js-readfile-oom.patch
Review of attachment 8341455 [details] [diff] [review]:
-----------------------------------------------------------------
Great! r=me
Attachment #8341455 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Status: NEW → ASSIGNED
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
status-firefox28:
--- → fixed
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•