Bug 945568 - Properly handle OOM in ReadFile. r=terrence